--- a/src/index.css
+++ b/src/index.css
@@ -202,8 +202,8 @@ img {
   font-weight: 600;
   border-radius: 10px;
   background-color: #0d7377;
-  padding: 0.3em;
-  max-height: 1.9em;
+  /* padding: 0.3em; */
+  max-height: 2.2em;
 }
 .proj-desc {
   display: flex;
@@ -252,13 +252,14 @@ img {
   padding: 5px;
 }
 #CONTACT a {
+  /* display: flex; */
   text-align: center;
-  width: 150px;
+  width: 200px;
   text-decoration: none;
   color: #14ffec;
   font-size: 1.1em;
   font-weight: 600;
-  border-radius: 10px;
+  border-radius: 5px;
   background-color: #0d7377;
   padding: 0.3em;
   max-height: 1.9em;
@@ -342,6 +343,11 @@ img {
   .contact {
     max-width: 80%;
     margin: 0 auto;
+  }
+
+  #CONTACT a {
+    /* display: flex; */
+    width: 90px;
   }
 
   .nav .nav-btn {
